--- a/ProtectApp/ProtectApp/Info.plist
+++ b/ProtectApp/ProtectApp/Info.plist
@@ -21,5 +21,12 @@
 	<string>1</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.80645295629-b9m2b5qd6546u1pcc171q9i0g68mi726</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>location</string>
+		<string>processing</string>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
